/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option csharp_namespace = "Energinet.DataHub.MarketParticipant.Integration.Model.Protobuf";
import "google/protobuf/timestamp.proto";

// An integration event raised when the status of the actor is changed.
message ActorStatusChangedIntegrationEventContract {
    // The id of the integration event. Is a GUID.
    string Id = 1;
    // The id of the actor. Is a GUID.
    string ActorId = 2;
    // The id of the organization. Is a GUID.
    string OrganizationId = 3;
    // The new status of the actor.
    // The values are: New, Active, Passive, Inactive.
    string Status = 4;
    // The creation time of the integration event.
    google.protobuf.Timestamp EventCreated = 5;
    // The type of the current event: ActorStatusChangedIntegrationEvent.
    string Type = 6;
}